<resources>
    <string name="app_name">RouteSP</string>
    <string name="about_screen">About</string>
    <string name="settings_screen">Settings</string>

    <string name="gps_disabled">GPS Disabled</string>
    <string name="please_turn_on_gps">Please turn on GPS</string>
    <string name="please_grant_required_permission">Please grant the required permission</string>
    <string name="location_permission">Location permission -> Allow all the time</string>
    <string name="ok">OK</string>
    <string name="osm_copyright_notice">© OpenStreetMap\ncontributors</string>

    <string name="overview">OVERVIEW</string>
    <string name="recorded">Recorded</string>
    <string name="route">Route</string>
    <string name="details">Details</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="avg_speed">Avg speed</string>
    <string name="altitude">Altitude</string>
    <string name="speed_by_km"> Speed by km</string>
    <string name="accuracy">Accuracy</string>
    <string name="time">Time</string>
    <string name="recordings">Recordings</string>

    <string name="less_tkm">Less than 1 km</string>

    <string name="delete">DELETE</string>
    <string name="delete_record">Delete recorded route</string>
    <string name="delete_record_confirmation">Are you sure you want to delete recorded route? This action cannot be undone.</string>

    <string name="background_restricted">Background activity is restricted</string>
    <string name="background_restricted_msg">Route recording cannot function correctly is background restrictions are enabled.\nPlease disable them.\nBattery Usage -> enable \'Allow background activity\' to \'Unrestricted\'</string>

    <string name="notification_channel_name">RouteSP LocationService</string>
    <string name="notification_content_title">RouteSP is running</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="about_app_description">App for GPS‑based route tracking and recording.</string>
    <string name="about_version">Version</string>
    <string name="about_source_code">Source code</string>
    <string name="about_license">License</string>
    <string name="about_license_name">Apache-2.0 license</string>
    <string name="about_author">Author</string>
    <string name="about_author_name">xDMPx</string>

    <string name="about_source_code_url">https://github.com/xDMPx/RouteSP</string>
    <string name="about_license_url">"https://github.com/xDMPx/RouteSP/blob/main/LICENSE"</string>
    <string name="about_author_url">https://github.com/xDMPx</string>

    <string name="settings_pure_dark">Use pure(AMOLED) dark in dark them</string>
    <string name="settings_dynamic_color">Use dynamic colors in theme</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_delete_all">Delete all recorded routes</string>
    <string name="confirmation_delete_all">Are you sure you want to delete all recorded routes? This action cannot be undone.</string>
    <string name="settings_export_json">Export all recorded routes to a JSON file</string>
    <string name="settings_import_json">Import recorded routes from a JSON file</string>
    <string name="settings_default_distance_units_km">Default distance unit</string>
    <string name="settings_default_speed_units_kmh">Default speed unit</string>

    <string name="export_successful">Recorded routes exported</string>
    <string name="export_failed">Error exporting data</string>
    <string name="import_successful">Recorded routes imported</string>
    <string name="import_failed">Error importing data</string>
    <string name="initializing">Initializing…</string>

</resources>
