<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <RadioGroup
        android:id="@+id/radioGroupTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/radioSystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="100dp"
            android:text="@string/settings_theme_system"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/radioDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="100dp"
            android:text="@string/settings_theme_dark"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/radioLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="100dp"
            android:text="@string/settings_theme_light"
            tools:ignore="RtlSymmetry" />

    </RadioGroup>
</androidx.cardview.widget.CardView>